Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12167

ListView footer is not positioned properly if model is cleared

XMLWordPrintable

    • 9adc85fdfa0af2b6948408932188ee1b79247fa6

      The footer will remain in its last position instead of being moved to the beginning of the view.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            martjone Martin Jones (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes