Position GridView and ListView footer correctly when model cleared.

Task-number: QTBUG-12167
(cherry picked from commit 9adc85fdfa0af2b6948408932188ee1b79247fa6)